login, getMe succesfully (but error getMe swagger)
