# src/models/user.model.js
@@ -2,12 +2,17 @@ const mongoose = require("mongoose");
 
 const Schema = mongoose.Schema;
 
-const UserSchema = new Schema({
-  userName: {type: String, required: true},
-  email: { type: String, required: true },
-  password: { type: String, required: true},
-  role: { type: String, enum: ["Admin", "User"], ref: "Admin" },
-  isActive: { type: Boolean, default: true },
-}, {versionKey: false, timestamps: true});
+const UserSchema = new Schema(
+  {
+    userName: { type: String, required: true },
+    email: { type: String, required: true },
+    password: { type: String, required: true },
+    role: { type: String, enum: ["Admin", "User", "Staff"], default: "User" },
+    accessToken: [{ type: String }],
+    refreshToken: [{ type: String }],
+    isActive: { type: Boolean, default: true },
+  },
+  { versionKey: false, timestamps: true }
+);
 
 module.exports = mongoose.model("User", UserSchema);
